# kMeans

./: .gitignore  CMakeLists.txt
prj.cw/: CMakeLists.txt  kmeans.cpp  main.cpp
prj.cw/include/: Doxyfile
prj.cw/include/algorithm/: kmeans.hpp
prj.cw/include/datasets/: dataset0002.csv  dataset0003.csv
prj.cw/include/output/: latex.hpp
prj.test/: CMakeLists.txt  kmeans_tests.cpp
